[package]
name = "jawbone"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
percent-encoding = "2.3.1"
rodio = "0.20.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tera = "1.20.0"
tokio = { version = "1.42.0", features = ["full"] }
env_logger = "0.11.5"
tracing-actix-web = "0.7.15"
dirs = "5.0.1"
actix-cors = "0.7.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
mime_guess = "2.0.5"
